use bower to install jquery

--- a/server/html/account.html
+++ b/server/html/account.html
@@ -107,7 +107,7 @@
     </ul>
   </body>
 
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="/components/jquery/dist/jquery.min.js"></script>
   <script>
     $('#app-upload input[type=file]').on('change', function(e) {
       ga('send', 'event', 'app-upload', 'start');
