--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -234,7 +234,7 @@
   </script>
 
   <!-- test runner -->
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="/components/jquery/dist/jquery.min.js"></script>
   <script src="/js/esprima.min.js" charset="utf-8"></script>
   <script src="/js/escodegen.min.js" charset="utf-8"></script>
   <script src="/js/chetbot-test-runner.js"></script>
