--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -12,6 +12,13 @@
       paper-toolbar {
         --paper-toolbar-background: #00BCD4;
       }
+
+      paper-toolbar .account img {
+        width: 24px;
+        height: 24px;
+        border-radius: 12px;
+        border: none;
+      }
     </style>
     <style type="text/css">
     body {
@@ -205,7 +212,10 @@
         <a href="/account" alt="Apps">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
         </a>
-        <div class="title">CHETBOT</div>
+        <div class="title"><!-- CHETBOT  --></div>
+        <a class="account" href="/account" alt="{{displayName}}">
+          <img src="{{avatarUrl}}"/>
+        </a>
       </paper-toolbar>
       {{/user}}
       <div class="content">
