--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}} - ChetBot</title>
+    <title>Edit - ChetBot</title>
     <link rel="icon" href="/favicon.ico">
     <link href="/components/paper-header-panel/paper-header-panel.html" rel="import">
     <link href="/components/paper-toolbar/paper-toolbar.html" rel="import">
@@ -18,6 +18,11 @@
         height: 24px;
         border-radius: 12px;
         border: none;
+      }
+
+      paper-toolbar a {
+        color: #fff;
+        z-index: 2;
       }
     </style>
     <style type="text/css">
@@ -209,11 +214,11 @@
     <paper-header-panel class="cyan">
       {{#user}}
       <paper-toolbar>
-        <a href="/account" alt="Apps">
+        <a href="/apps" alt="Apps">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
         </a>
-        <div class="title"><!-- CHETBOT  --></div>
-        <a class="account" href="/account" alt="{{displayName}}">
+        <div class="title"><!-- TODO: app name --></div>
+        <a href="/account" class="account" alt="{{displayName}}">
           <img src="{{avatarUrl}}"/>
         </a>
       </paper-toolbar>
