--- a/server/html/login.html
+++ b/server/html/login.html
@@ -44,16 +44,7 @@
     <a class="login github" href="/auth/github">Login with GitHub</a>
     <p>Signing in with GitHub is for authentication purposes only. We will not have access to you code repositorires.</p>
   </body>
-  
-  <!-- Google Analytics -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-61569356-3', 'auto');
-    ga('send', 'pageview');
-  </script>
+  {{> google_analytics}}
 
 </html>
