--- a/server/html/account.html
+++ b/server/html/account.html
@@ -3,27 +3,9 @@
   <head>
     <title>My Account - ChetBot</title>
     <link rel="icon" href="/favicon.ico">
-    <link href="/components/paper-header-panel/paper-header-panel.html" rel="import">
-    <link href="/components/paper-toolbar/paper-toolbar.html" rel="import">
-    <link href="/components/iron-icons/iron-icons.html" rel="import">
-    <link href="/components/iron-icons/av-icons.html" rel="import">
-    <link href="/components/paper-icon-button/paper-icon-button.html" rel="import">
-    <style is="custom-style">
-      paper-toolbar {
-        --paper-toolbar-background: #00BCD4;
-      }
 
-      paper-toolbar .account img {
-        width: 24px;
-        height: 24px;
-        border-radius: 12px;
-      }
+    {{> material-design}}
 
-      paper-toolbar a {
-        color: #fff;
-        z-index: 2;
-      }
-    </style>
     <style type="text/css">
       body {
         font-family: 'Roboto', sans-serif;
@@ -56,13 +38,7 @@
       h2 .username {
         font-size: 0.67em;
       }
-
-      a {
-        text-decoration: none;
-        color: #777;
-      }
     </style>
-    <link href="http://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet" type="text/css">
   </head>
   <body class="fullbleed">
     <paper-header-panel class="cyan">
