--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -3,39 +3,12 @@
   <head>
     <title>Apps - ChetBot</title>
     <link rel="icon" href="/favicon.ico">
-    <link href="/components/paper-header-panel/paper-header-panel.html" rel="import">
-    <link href="/components/paper-toolbar/paper-toolbar.html" rel="import">
-    <link href="/components/iron-icons/iron-icons.html" rel="import">
-    <link href="/components/iron-icons/av-icons.html" rel="import">
-    <link href="/components/paper-icon-button/paper-icon-button.html" rel="import">
-    <style is="custom-style">
-      paper-toolbar {
-        --paper-toolbar-background: #00BCD4;
-      }
 
-      paper-toolbar .account img {
-        width: 24px;
-        height: 24px;
-        border-radius: 12px;
-      }
+    {{> material-design}}
 
-      paper-toolbar a {
-        color: #fff;
-        z-index: 2;
-      }
-    </style>
     <style type="text/css">
-      body {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 100;
-      }
-
       .content {
         text-align: center;
-      }
-
-      h1, h2, h3, h4 {
-        font-weight: 300;
       }
 
       ul#apps {
@@ -47,11 +20,6 @@
 
       ul#apps > li {
         margin: 0.5em 0;
-      }
-
-      a {
-        text-decoration: none;
-        color: #777;
       }
 
       h4 {
@@ -91,7 +59,6 @@
         background: #eee;
       }
     </style>
-    <link href="http://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet" type="text/css">
   </head>
   <body class="fullbleed">
     <paper-header-panel class="cyan">
