--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -3,43 +3,12 @@
   <head>
     <title>Edit - ChetBot</title>
     <link rel="icon" href="/favicon.ico">
-    <link href="/components/paper-header-panel/paper-header-panel.html" rel="import">
-    <link href="/components/paper-toolbar/paper-toolbar.html" rel="import">
-    <link href="/components/iron-icons/iron-icons.html" rel="import">
-    <link href="/components/iron-icons/av-icons.html" rel="import">
-    <link href="/components/paper-icon-button/paper-icon-button.html" rel="import">
-    <style is="custom-style">
-      paper-toolbar {
-        --paper-toolbar-background: #00BCD4;
-      }
 
-      paper-toolbar .account img {
-        width: 24px;
-        height: 24px;
-        border-radius: 12px;
-        border: none;
-      }
+    {{> material-design}}
 
-      paper-toolbar a {
-        color: #fff;
-        z-index: 2;
-      }
-    </style>
     <style type="text/css">
     body {
       background: #e7e7e7;
-      text-align: center;
-      font-family: sans-serif;
-      color: rgba(0,0,0,0.87);
-    }
-
-    body > * {
-      text-align: left;
-    }
-
-    a {
-      color: rgba(0,0,0,0.87);
-      text-decoration: none;
     }
 
     a > .hint {
@@ -49,10 +18,6 @@
       margin-right: 1em;
       position: relative;
       top: 1px;
-    }
-
-    paper-toolbar * {
-      color: #fff;
     }
 
     #header {
