html/partials/google_analytics.html -> html/partials/google-analytics.html

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -266,7 +266,7 @@ __('Sign in').tap()
     <!-- Bootstrap Core JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-    {{> google_analytics}}
+    {{> google-analytics}}
 
 </body>
 
