--- a/server/html/login.html
+++ b/server/html/login.html
@@ -45,6 +45,6 @@
     <p>Signing in with GitHub is for authentication purposes only. We will not have access to you code repositorires.</p>
   </body>
 
-  {{> google_analytics}}
+  {{> google-analytics}}
 
 </html>
