--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -244,6 +244,6 @@
   <script src="/js/escodegen.min.js" charset="utf-8"></script>
   <script src="/js/chetbot-test-runner.js"></script>
 
-  {{> google_analytics}}
+  {{> google-analytics}}
 
 </html>
