--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -95,58 +95,19 @@
   </body>
 
   <script src="/components/jquery/dist/jquery.min.js"></script>
-  <script>
-    $('#app-upload input[type=file]').on('change', function(e) {
-      ga('send', 'event', 'app-upload', 'start');
-
-      $(e.target).hide();
-
-      var status = $('#app-upload .status');
-      status.removeClass('error').text('Requesting upload...').show();
-
-      var file = e.target.files[0];
-      if (!file) {
-        $('#app-upload input[name=app_url]').val('');
-        ga('send', 'event', 'app-upload', 'no-file');
-        return;
-      }
-
-      $.ajax({
-        url: '/sign_s3?file_type=' + file.type,
-        method: 'GET',
-        dataType: 'json'
-      }).done(function(req) {
-        ga('send', 'event', 'app-upload', 'request-granted');
-        status.text('Uploading...');
-        var xhr = new XMLHttpRequest();
-        xhr.upload.onprogress = function(e) {
-          var percent_complete = Math.floor(e.loaded / e.total * 100);
-          status.text(percent_complete + '% complete...');
-        };
-        xhr.onload = function() {
-          if (xhr.status === 200) {
-            ga('send', 'event', 'app-upload', 'uploaded');
-
-            status.text('Done. Redirecting...');
-            $('#app-upload form input[name=app_url]').val(req.url);
-            $('#app-upload form').submit();
-          } else {
-            ga('send', 'event', 'app-upload', 'upload-error', xhr.responseText);
-            status.text(xhr.responseText).addClass('error');
-            console.error(xhr.status, xhr.responseText);
-          }
-        };
-        xhr.onerror = function(e) {
-          ga('send', 'event', 'app-upload', 'upload-error', xhr.responseText);
-          status.text('Upload error: ' + xhr.responseText).addClass('error');
-          console.error(xhr.responseText, e);
-        };
-        xhr.open('PUT', req.signed_request);
-        xhr.send(file);
-      });
-    });
-  </script>
+  <script src="/js/s3_upload.js"></script>
 
   {{> google-analytics}}
 
+  <script>
+    s3_upload($('#app-upload input[type=file]'), $('#app-upload input[name=app_url]'), {
+      progress: function(progress) {
+        $('#app-upload .status').removeClass('error').text(progress).show();
+      },
+      error: function(error) {
+        $('#app-upload .status').addClass('error').text(error).show();
+      },
+      google_analytics: ga
+    });
+  </script>
 </html>
