extract icon, app name and version from APK when uploading

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -93,7 +93,7 @@
       <div class="content">
         {{#app}}
         <div id="header">
-          <img id="app-icon" src="{{iconURL}}" title="{{name}}"/>
+          <img id="app-icon" src="{{icon}}" title="{{name}}"/>
           <h2>{{name}}<br><span class="info">({{identifier}})</span><br><span class="info">{{version}}</span></h2>
         </div>
         {{/app}}
