minor: UI strings

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -107,7 +107,7 @@
         </div>
         <ul id="code">
           {{#code}}
-          <li><a href="/app/{{app_id}}/edit/{{id}}">Code ({{id}})</a></li>
+          <li><a href="/app/{{app_id}}/edit/{{id}}">Edit Code ({{id}})</a></li>
           {{/code}}
         </ul>
       </div>
