--- a/server/html/login.html
+++ b/server/html/login.html
@@ -42,7 +42,7 @@
   <body>
     <img id="main-logo" src="/images/bot.png" title="ChetBot"/>
     <a class="login github" href="/auth/github">Login with GitHub</a>
-    <p>Signing in with GitHub is for authentication purposes only. We will not have access to you code repositorires.</p>
+    <p>Signing in with GitHub is for authentication purposes only. We will not have access to your code.</p>
   </body>
 
   {{> google-analytics}}
