minor: upload button alignment

--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -59,6 +59,9 @@
       }
 
       input[type=file] {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         color: transparent;
         width: 12em;
       }
