--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -20,7 +20,6 @@
 
       ul#apps > li {
         margin: 0.5em 0;
-        min-height: 4em;
         display: block;
       }
 
@@ -56,6 +55,7 @@
       #app-upload .status {
         display: none;
         color: #999;
+        text-align: center;
       }
 
       input[type=file] {
