fixing app list css

--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -21,6 +21,7 @@
       ul#apps > li {
         margin: 0.5em 0;
         display: block;
+        min-height: 4em;
       }
 
       ul#apps .details {
