end test if there is an error, show failure/success at end

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -142,7 +142,7 @@
     }
 
     #test-report li.line > ol > li {
-      display: inline-block;
+      display: inline;
     }
 
     #test-report li.line > ol::before {
