use app icon as favicon resolves #55

--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Edit - ChetBot</title>
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="{{app.icon}}">
 
     {{> material-design}}
 
