--- a/server/html/app.html
+++ b/server/html/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>{{app.name}} - ChetBot</title>
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="{{app.icon}}">
 
     {{> material-design}}
 
