prevent google analytics showing up on login page

--- a/server/html/login.html
+++ b/server/html/login.html
@@ -10,7 +10,7 @@
         color: rgba(0,0,0,0.87);
         text-align: center;
       }
-      body > * {
+      body > *:not(script) {
         display: block;
         margin: 1em auto;
       }
